--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ skipsdist = True
 usedevelop = True
 
 envlist = 
-    python{3.8,3.9,3.10,3.11}-django{3.2,4.0,4.1,main}-wagtail{4.0,4.1,main}-{sqlite,postgres}
+    python{3.8,3.9,3.10,3.11,3.12}-django{3.2,4.0,4.1,main}-wagtail{4.0,4.1,4.2,main}-{sqlite,postgres}
 
 [flake8]
 # E501: Line too long
@@ -20,6 +20,7 @@ basepython =
     python3.9: python3.9
     python3.10: python3.10
     python3.11: python3.11
+    python3.12: python3.12
 
 deps =
     coverage
@@ -33,6 +34,7 @@ deps =
 
     wagtail4.0: wagtail>=4.0,<4.1
     wagtail4.1: wagtail>=4.1,<4.2
+    wagtail4.2: wagtail>=4.2,<4.3
     wagtailmain: git+https://github.com/wagtail/wagtail.git@main#egg=Wagtail
 
     postgres: psycopg2>=2.6
